--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h1 class="fw-bold title mb-title">Hi, This is Carlo.</h1>
                     <p class="text-24">Currently → <span class = "fw-bold"> Studying for Bachelor's Degree</span></p>
                     <p class="text-24">Learning → <span class="fw-bold"> Arduino, JavaScript</span></p>
-                    <p class="text-24">Hobbies → <span class="fw-bold"> Guitar, Designing</span></p>
+                    <p class="text-24">Hobbies → <span class="fw-bold"> Designing</span></p>
                 </div>
             </div>
         </div>
