added new section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <div class="container-fluid">
+    <div class="container-fluid mt-4">
         <div class="section-box text-white">
             <div class="row">
                 <div class="col-12 text-white" style="gap: 94px;">
@@ -49,7 +49,7 @@
                     </p>
                     <hr class="gap-hero">
                     <h1 class="fw-bold title mb-title">Hi, This is Carlo.</h1>
-                    <p class="text-24">Currently → <span class = "fw-bold"> Studying for Bachelor's Degree</span></p>
+                    <p class="text-24">Currently → <span class="fw-bold"> Studying for Bachelor's Degree</span></p>
                     <p class="text-24">Learning → <span class="fw-bold"> Arduino, JavaScript</span></p>
                     <p class="text-24">Hobbies → <span class="fw-bold"> Designing</span></p>
                 </div>
@@ -57,12 +57,34 @@
         </div>
     </div>
 
-    <div class="container-fluid shadow">
-        <div class="row">
-            <div class="col bg-danger shadow"></div>
+    <section id="about" class="about-section d-flex align-items-start justify-content-center">
+        <div class="container-fluid px-0">
+            <div class="d-flex justify-content-center align-items-start about-content">
+                <div class="about-text col-md-6">
+                    <h2>Empowering ideas through<br>intelligent design and technology.</h2>
+                </div>
+                <div class="about-description col-md-4">
+                    <p>
+                        I merge creativity, code, and AI to redefine how people interact with
+                        digital experiences — purposeful, seamless, and forward-thinking.
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
 
+    <section id="about" class="project-section d-flex align-items-start justify-content-center">
+        <div class="container-fluid">
+            <hr  style="color: white;">
+            <div class="col-md-6"  style="color: white;">
+                <h2>Created with Care_</h2>
+            </div>
+            <p style="color: white;">
+                I merge creativity, code, and AI to redefine how people interact with
+                digital experiences — purposeful, seamless, and forward-thinking.
+            </p>
+        </div>
+    </section>
 
 </body>
 
