--- a/index.html
+++ b/index.html
@@ -57,32 +57,30 @@
         </div>
     </div>
 
-    <section id="about" class="about-section d-flex align-items-start justify-content-center">
-        <div class="container-fluid px-0">
-            <div class="d-flex justify-content-center align-items-start about-content">
-                <div class="about-text col-md-6">
-                    <h2>Empowering ideas through<br>intelligent design and technology.</h2>
-                </div>
-                <div class="about-description col-md-4">
-                    <p>
-                        I merge creativity, code, and AI to redefine how people interact with
-                        digital experiences — purposeful, seamless, and forward-thinking.
-                    </p>
-                </div>
+    <section id="about" class="about-section">
+        <div class="row about-content">
+            <div class="about-text col-8">
+                <h2>Empowering ideas through<br>intelligent design and technology.</h2>
+            </div>
+            <div class="about-description col-3">
+                <p>
+                    I merge creativity, code, and AI to redefine how people interact with
+                    digital experiences — purposeful, seamless, and forward-thinking.
+                </p>
             </div>
         </div>
     </section>
 
-    <section id="about" class="project-section d-flex align-items-start justify-content-center">
-        <div class="container-fluid">
-            <hr  style="color: white;">
-            <div class="col-md-6"  style="color: white;">
-                <h2>Created with Care_</h2>
+    <section id="project-intro" class="project-intro-section">
+        <div class="container-fluid px-0 position-relative">
+            <div class="project-line d-flex align-items-center justify-content-between">
+                <div class="text-start">
+                    <h3 class="fw-semibold mb-1">Created with care_</h3>
+                    <p class="mb-0 small-text">These are a handful of my recent works</p>
+                </div>
+
+                <button class="circle-btn btn" aria-label="About me">about me</button>
             </div>
-            <p style="color: white;">
-                I merge creativity, code, and AI to redefine how people interact with
-                digital experiences — purposeful, seamless, and forward-thinking.
-            </p>
         </div>
     </section>
 
