--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 </head>
 
 <body>
-    <div class="ripple-layer" aria-hidden="true"></div>
     <header class="sticky-top">
-        <div class="container-fluid py-3">
+        <div class="container-fluid py-2 mt-4">
             <div class="d-flex align-items-center justify-content-between mx-56 rounded-pill shadow"
-                style="background: linear-gradient(184deg, #000 3.58%, #898989 415.15%); padding: 28px 81px;">
+                style="background: linear-gradient(184deg, #000 3.58%, #898989 415.15%); padding: 22px 81px;">
                 <div class="d-flex align-items-center">
                     <div class="rounded-circle d-flex align-items-center justify-content-center"
                         style="width:64px; height:64px;">
