updated text and added html structure for portfolio

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     </p>
                     <hr class="gap-hero">
                     <h1 class="fw-bold title mb-title">Hi, This is Carlo.</h1>
-                    <p class="text-24">Currently → <span class="fw-bold"> Studying for Bachelor's Degree</span></p>
+                    <p class="text-24">Currently → <span class="fw-bold"> Pursuing my Bachelor’s Degree in Information Technology</span></p>
+                    <p class="text-24">School → <span class="fw-bold"> Polytechnic University of the Philippines - Sto. Tomas Branch</span></p>
                     <p class="text-24">Learning → <span class="fw-bold"> Arduino, JavaScript</span></p>
-                    <p class="text-24">Hobbies → <span class="fw-bold"> Designing</span></p>
                 </div>
             </div>
         </div>
@@ -63,8 +63,7 @@
             </div>
             <div class="about-description col-3">
                 <p>
-                    I merge creativity, code, and AI to redefine how people interact with
-                    digital experiences — purposeful, seamless, and forward-thinking.
+                    I enjoy bringing ideas to life through design and code, creating experiences that are thoughtful, functional, and meaningful.
                 </p>
             </div>
         </div>
@@ -83,6 +82,42 @@
         </div>
     </section>
 
+    <section id="project-selection" class="project-selection">
+        <div class="container-fluid px-0">
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="project-card position-relative">
+                        <img src="project1.jpg" alt="Project 1" class="img-fluid rounded">
+                        <div
+                            class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                            <h5 class="text-white">Project Title 1</h5>
+                            <p class="text-white">Brief description of Project 1.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="project-card position-relative">
+                        <img src="project2.jpg" alt="Project 2" class="img-fluid rounded">
+                        <div
+                            class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                            <h5 class="text-white">Project Title 2</h5>
+                            <p class="text-white">Brief description of Project 2.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="project-card position-relative">
+                        <img src="project3.jpg" alt="Project 3" class="img-fluid rounded">
+                        <div
+                            class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                            <h5 class="text-white">Project Title 3</h5>
+                            <p class="text-white">Brief description of Project 3.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
