--- a/index.html
+++ b/index.html
@@ -2,36 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>James Carlo Rivera</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Avera" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
 </head>
 
 <body>
     <header class="sticky-top">
         <div class="container-fluid py-2 mt-4">
-            <div class="d-flex align-items-center justify-content-between mx-56 rounded-pill shadow"
-                style="background: linear-gradient(184deg, #000 3.58%, #898989 415.15%); padding: 22px 81px;">
+            <div class="d-flex align-items-center justify-content-between mx-56 rounded-pill shadow" style="
+            background: linear-gradient(184deg, #000 3.58%, #898989 415.15%);
+            padding: 22px 81px;
+          ">
                 <div class="d-flex align-items-center">
                     <div class="rounded-circle d-flex align-items-center justify-content-center"
-                        style="width:64px; height:64px;">
-                        <img src="Logo.svg" alt="logo" style="width:68%; height:68%; object-fit:contain;" />
+                        style="width: 64px; height: 64px">
+                        <img src="Logo.svg" alt="logo" style="width: 68%; height: 68%; object-fit: contain" />
                     </div>
                 </div>
 
                 <nav aria-label="Main navigation">
                     <ul class="nav">
-                        <li class="nav-item"><a class="nav-link text-white active" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Work</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white active" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Work</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -41,16 +54,27 @@
     <div class="container-fluid mt-4">
         <div class="section-box text-white">
             <div class="row">
-                <div class="col-12 text-white" style="gap: 94px;">
+                <div class="col-12 text-white" style="gap: 94px">
                     <p class="fw-bold mb-1 d-flex align-items-center text-white">
                         <i class="bi bi-geo-alt-fill me-2 icon-32"></i>
                         <span class="text-24">Based in Philippines → 1:40 PM</span>
                     </p>
-                    <hr class="gap-hero">
+                    <hr class="gap-hero" />
                     <h1 class="fw-bold title mb-title">Hi, This is Carlo.</h1>
-                    <p class="text-24">Currently → <span class="fw-bold"> Pursuing my Bachelor’s Degree in Information Technology</span></p>
-                    <p class="text-24">School → <span class="fw-bold"> Polytechnic University of the Philippines - Sto. Tomas Branch</span></p>
-                    <p class="text-24">Learning → <span class="fw-bold"> Arduino, JavaScript</span></p>
+                    <p class="text-24">
+                        Currently →
+                        <span class="fw-bold">
+                            Pursuing my Bachelor’s Degree in Information Technology</span>
+                    </p>
+                    <p class="text-24">
+                        School →
+                        <span class="fw-bold">
+                            Polytechnic University of the Philippines - Sto. Tomas
+                            Branch</span>
+                    </p>
+                    <p class="text-24">
+                        Learning → <span class="fw-bold"> Arduino, JavaScript</span>
+                    </p>
                 </div>
             </div>
         </div>
@@ -59,11 +83,14 @@
     <section id="about" class="about-section">
         <div class="row about-content">
             <div class="about-text col-8">
-                <h2>Empowering ideas through<br>intelligent design and technology.</h2>
+                <h2>
+                    Empowering ideas through<br />intelligent design and technology.
+                </h2>
             </div>
             <div class="about-description col-3">
                 <p>
-                    I enjoy bringing ideas to life through design and code, creating experiences that are thoughtful, functional, and meaningful.
+                    I enjoy bringing ideas to life through design and code, creating
+                    experiences that are thoughtful, functional, and meaningful.
                 </p>
             </div>
         </div>
@@ -74,7 +101,9 @@
             <div class="project-line d-flex align-items-center justify-content-between">
                 <div class="text-start">
                     <h3 class="fw-semibold mb-1">Created with care_</h3>
-                    <p class="mb-0 small-text">These are a handful of my recent works</p>
+                    <p class="mb-0 small-text">
+                        These are a handful of my recent works
+                    </p>
                 </div>
 
                 <button class="circle-btn btn" aria-label="About me">about me</button>
@@ -83,41 +112,100 @@
     </section>
 
     <section id="project-selection" class="project-selection">
-        <div class="container-fluid px-0">
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="project-card position-relative">
-                        <img src="project1.jpg" alt="Project 1" class="img-fluid rounded">
-                        <div
-                            class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                            <h5 class="text-white">Project Title 1</h5>
-                            <p class="text-white">Brief description of Project 1.</p>
-                        </div>
+        <div class="project-container container-fluid px-0">
+            <div class="d-flex flex-row justify-content-between align-items-stretch flex-wrap">
+                <div class="project-card position-relative flex-fill m-1">
+                    <img src="project1.jpg" alt="Project 1" class="img-fluid" />
+                    <div
+                        class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                        <h5 class="text-white">Tokyo Showcase</h5>
+                        <p class="text-white">Activity No.5 in WebDev</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="project-card position-relative">
-                        <img src="project2.jpg" alt="Project 2" class="img-fluid rounded">
-                        <div
-                            class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                            <h5 class="text-white">Project Title 2</h5>
-                            <p class="text-white">Brief description of Project 2.</p>
-                        </div>
+
+                <div class="project-card position-relative flex-fill m-1">
+                    <img src="project2.jpg" alt="Project 2" class="img-fluid" />
+                    <div
+                        class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                        <h5 class="text-white">Playstation 5 Landing Page</h5>
+                        <p class="text-white">Activity No.4 in WebDev</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="project-card position-relative">
-                        <img src="project3.jpg" alt="Project 3" class="img-fluid rounded">
-                        <div
-                            class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                            <h5 class="text-white">Project Title 3</h5>
-                            <p class="text-white">Brief description of Project 3.</p>
-                        </div>
+
+                <div class="project-card position-relative flex-fill m-1">
+                    <img src="project3.jpg" alt="Project 3" class="img-fluid" />
+                    <div
+                        class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                        <h5 class="text-white">Flow Mail</h5>
+                        <p class="text-white">Mail Integration</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section id="contact" class="contact-section">
+        <div class="container-fluid px-0">
+            <div
+                class="contact-box d-flex flex-column flex-md-row align-items-center justify-content-between text-white">
+                <div class="contact-text mb-3 mb-md-0">
+                    <h4>Get in Touch</h4>
+                    <p class="mb-0">Feel free to reach out to me if you're looking for a developer, have a query, or simply want to connect.</p>
+                </div>
+            </div>
+
+            <div class="contact-info d-flex flex-wrap align-items-center justify-content-center gap-4 my-5">
+                <a class="info-button d-flex align-items-center" href="mailto:jamescarlorivera52@gmail.com" aria-label="Email">
+                    <span class="icon"><img src="mail.svg" alt="email"></span>
+                    <span class="info-text">jamescarlorivera52@gmail.com</span>
+                </a>
+                <a class="info-button d-flex align-items-center" href="tel:+639276543210" aria-label="Call">
+                    <span class="icon"><img src="call.svg" alt="call"></span>
+                    <span class="info-text">Available upon request</span>
+                </a>
+                <a class="info-button d-flex align-items-center" href="https://github.com/James-Rivera" target="_blank" rel="noopener" aria-label="GitHub">
+                    <span class="icon"><img src="github.svg" alt="github"></span>
+                    <span class="info-text">James-Rivera</span>
+                </a>
+            </div>
+            <div class="container-fluid px-0 mb-5">
+                <form action="https://formspree.io/f/mrbovjer" method="POST" class="row">
+                    <div class="col-6">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" name="name" required />
+                    </div>
+                    <div class="col-6">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="_replyto" required />
+                    </div>
+                    <div class="col-12 mt-4">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" name="message" rows="8" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-message d-inline-flex justify-content-center align-items-center mx-auto mt-4">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-section py-5">
+        <div class="container text-center text-white">
+            <p class="mb-0">© 2025 James Carlo Rivera. All rights reserved.</p>
+        </div>
+
+    </footer>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const cards = document.querySelectorAll(".project-card");
+            cards.forEach((card) => {
+                card.addEventListener("click", () => {
+                    cards.forEach((c) => c.classList.remove("selected"));
+                    card.classList.add("selected");
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
