added activity 6 and about.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </p>
                 </div>
 
-                <button class="circle-btn btn" aria-label="About me">about me</button>
+                <a href="about.html" class="circle-btn btn text-decoration-none" aria-label="About me">about me</a>
             </div>
         </div>
     </section>
@@ -159,13 +159,13 @@
                 </div>
 
                 <div class="project-card position-relative flex-fill m-1">
-                    <a class="project-link d-block h-100" href="https://james-rivera.github.io/art2cart/" target="_blank" rel="noopener noreferrer">
+                    <a class="project-link d-block h-100" href="https://james-rivera.github.io/japan-gallery/" target="_blank" rel="noopener noreferrer">
                         <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
                             <h5 class="text-white fs-3">Art2Cart</h5>
                             <p class="text-white fs-6">Project from IPT</p>
                         </div>
 
-                        <div class="project-preview" data-src="https://james-rivera.github.io/art2cart/" aria-hidden="true">
+                        <div class="project-preview" data-src="https://james-rivera.github.io/japan-gallery/" aria-hidden="true">
                             <div class="preview-frame">
                                 <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
                                 <div class="preview-overlay"></div>
