--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                 <div class="project-card position-relative flex-fill m-1">
                     <a class="project-link d-block h-100" href="https://james-rivera.github.io/japan-gallery/" target="_blank" rel="noopener noreferrer">
                         <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                            <h5 class="text-white fs-3">Art2Cart</h5>
-                            <p class="text-white fs-6">Project from IPT</p>
+                            <h5 class="text-white fs-3">Japan Gallery</h5>
+                            <p class="text-white fs-6">Activity 6</p>
                         </div>
 
                         <div class="project-preview" data-src="https://james-rivera.github.io/japan-gallery/" aria-hidden="true">
