fixed some links and added case study for art2cart

--- a/index.html
+++ b/index.html
@@ -166,10 +166,26 @@
                 <div class="project-container container-fluid px-0">
                     <div class="d-flex flex-row justify-content-between align-items-stretch flex-wrap">
                         <div class="project-card position-relative flex-fill m-1 reveal--stagger">
+                            <a class="project-link d-block h-100" href="https://james-rivera.github.io/league-champion-api-dashboard/" target="_blank" rel="noopener noreferrer">
+                                <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                                    <h5 class="text-white fs-3">League Champion Explorer</h5>
+                                    <p class="text-white fs-6">Live Riot API Integration</p>
+                                </div>
+
+                                <div class="project-preview" data-src="https://james-rivera.github.io/league-champion-api-dashboard/" aria-hidden="true">
+                                    <div class="preview-frame">
+                                        <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
+                                        <div class="preview-overlay"></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="project-card position-relative flex-fill m-1 reveal--stagger">
                             <a class="project-link d-block h-100" href="https://james-rivera.github.io/tokyo-tourism-landing-page/" target="_blank" rel="noopener noreferrer">
                                 <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                                    <h5 class="text-white fs-3">Tokyo Tourism: Immersive Travel Portal</h5>
-                                    <p class="text-white fs-6">High-conversion landing page featuring modern typography, responsive hero sections, and minimalist navigation.</p>
+                                    <h5 class="text-white fs-3">Japan Tours</h5>
+                                    <p class="text-white fs-6">Responsive Travel Concept</p>
                                 </div>
 
                                 <div class="project-preview" data-src="https://james-rivera.github.io/tokyo-tourism-landing-page/" aria-hidden="true">
@@ -182,45 +198,29 @@
                         </div>
 
                         <div class="project-card position-relative flex-fill m-1 reveal--stagger">
+                            <a class="project-link d-block h-100" href="art2cart-case-study.html" target="_blank" rel="noopener noreferrer">
+                                <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
+                                    <h5 class="text-white fs-3">Art2Cart</h5>
+                                    <p class="text-white fs-6">Digital Marketplace</p>
+                                </div>
+
+                                <div class="project-preview" aria-hidden="true">
+                                    <div class="preview-frame">
+                                        <img src="img/dd.png" alt="Art2Cart preview" class="w-100 h-100" loading="lazy" style="object-fit: cover;" />
+                                        <div class="preview-overlay"></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="project-card position-relative flex-fill m-1 reveal--stagger">
                             <a class="project-link d-block h-100" href="https://james-rivera.github.io/ps5-page/" target="_blank" rel="noopener noreferrer">
                                 <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                                    <h5 class="text-white fs-3">Playstation 5 Landing Page</h5>
-                                    <p class="text-white fs-6">Activity No.4 in WebDev</p>
+                                    <h5 class="text-white fs-3">PS5 Landing Page</h5>
+                                    <p class="text-white fs-6">Reimagined Landing Page</p>
                                 </div>
 
                                 <div class="project-preview" data-src="https://james-rivera.github.io/ps5-page/" aria-hidden="true">
-                                    <div class="preview-frame">
-                                        <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
-                                        <div class="preview-overlay"></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="project-card position-relative flex-fill m-1 reveal--stagger">
-                            <a class="project-link d-block h-100" href="https://james-rivera.github.io/art2cart/" target="_blank" rel="noopener noreferrer">
-                                <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                                    <h5 class="text-white fs-3">Japan Gallery</h5>
-                                    <p class="text-white fs-6">Activity 6</p>
-                                </div>
-
-                                <div class="project-preview" data-src="https://james-rivera.github.io/art2cart/" aria-hidden="true">
-                                    <div class="preview-frame">
-                                        <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
-                                        <div class="preview-overlay"></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="project-card position-relative flex-fill m-1 reveal--stagger">
-                            <a class="project-link d-block h-100" href="https://james-rivera.github.io/league-champion-api-dashboard/" target="_blank" rel="noopener noreferrer">
-                                <div class="project-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-3">
-                                    <h5 class="text-white fs-3">Japan Gallery</h5>
-                                    <p class="text-white fs-6">Activity 6</p>
-                                </div>
-
-                                <div class="project-preview" data-src="https://james-rivera.github.io/league-champion-api-dashboard/" aria-hidden="true">
                                     <div class="preview-frame">
                                         <iframe loading="lazy" src="" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
                                         <div class="preview-overlay"></div>
