fixed hero section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <hr class="gap-hero" />
                             <h1 class="fw-bold title mb-title">James Rivera.</h1>
                             <p class="text-24 hero-meta"><span class="hero-label">Role</span><span class="hero-value">Full Stack Developer & Designer</span></p>
-                            <p class="text-24 hero-meta"><span class="hero-label">Stack</span><span class="hero-value">PHP, MySQL, Web Development, Figma</span></p>
+                            <p class="text-24 hero-meta"><span class="hero-label">Education</span><span class="hero-value">BS Information Technology (PUP)</span></p>
                             <p class="text-24 hero-meta"><span class="hero-label">Status</span><span class="hero-value">Available for remote work</span></p>
                         </div>
                     </div>
