--- a/art2cart-case-study.html
+++ b/art2cart-case-study.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art2Cart Case Study - James Carlo Rivera</title>
+    <title>Art2Cart Case Study</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -66,7 +66,12 @@
          <a class="cs-breadcrumb d-inline-flex align-items-center mb-5" href="index.html">← Back to Portfolio</a>
         <section class="cs-row cs-header py-5 reveal">
             <div class="cs-header-body w-100">
-                <h1 class="cs-title mb-2">Art2Cart</h1>
+                <h1 class="cs-title mb-2">
+                    <a class="art-link d-inline-flex align-items-center gap-2" href="http://art2cart.shop/" target="_blank" rel="noopener noreferrer">
+                        <span>Art2Cart</span>
+                        <i class="bi bi-box-arrow-up-right link-icon" aria-hidden="true"></i>
+                    </a>
+                </h1>
                 <p class="cs-intro mb-4">Art2Cart is a digital art marketplace connecting artists with collectors through an intuitive, gallery-inspired platform.</p>
                 <div class="cs-divider divider--animate" aria-hidden="true"></div>
                 <div class="cs-meta-row row row-cols-2 row-cols-md-4 g-3">
@@ -97,7 +102,7 @@
             </div>
             <div class="cs-right col-12 col-lg">
                 <p class="cs-desc">A responsive marketplace grid optimized for scanability and quick filtering. Users can browse by style, price, and artist, with fast-loading previews for a fluid discovery experience.</p>
-                <img class="cs-shot" src="https://via.placeholder.com/1600x900/1a1a1a/eeeeee?text=Marketplace+Grid+Screenshot" alt="Marketplace Grid Screenshot" />
+                <img class="cs-shot" src="img/markeplace.png" alt="Marketplace Grid Screenshot" />
             </div>
         </section>
 
@@ -119,7 +124,7 @@
             </div>
             <div class="cs-right col-12 col-lg">
                 <p class="cs-desc">An admin surface for creators and moderators to manage artworks, licenses, and orders. Clean tables, inline edits, and role-based access keep workflows tight.</p>
-                <img class="cs-shot" src="https://via.placeholder.com/1600x900/1a1a1a/eeeeee?text=Admin+Dashboard+Screenshot" alt="Admin Dashboard Screenshot" />
+                <img class="cs-shot" src="img/admin.png" alt="Admin Dashboard Screenshot" />
             </div>
         </section>
     </main>
