--- a/art2cart-case-study.html
+++ b/art2cart-case-study.html
@@ -24,10 +24,10 @@
 <body>
     <!-- Navbar -->
     <header class="sticky-top">
-        <div class="container-fluid py-2 mt-4 px-3 px-lg-5">
-            <nav class="navbar navbar-expand-lg navbar-dark rounded-pill shadow custom-navbar">
+        <div class="container-fluid p5-2 mt-4 px-3 px-lg-5">
+            <nav class="navbar navbar-expand-lg navbar-dark shadow custom-navbar">
                 <div class="container-fluid px-3 px-lg 5">
-                    <a href="index.html" class="navbar-brand d-inline-block" style="z-index: 1;">
+                    <a href="#" class="navbar-brand d-inline-block" style="z-index: 1;">
                         <div class="rounded-circle d-flex align-items-center justify-content-center"
                             style="width: 64px; height: 64px">
                             <img src="Logo.svg" alt="logo" style="width: 68%; height: 68%; object-fit: contain" />
@@ -42,16 +42,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto gap-lg 4">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="index.html">Home</a>
+                                <a class="nav-link text-white" href="about">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="about.html">About</a>
+                                <a class="nav-link text-white" href="#project-selection">Work</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="index.html#project-selection">Work</a>
+                                <a class="nav-link text-white" href="#contact">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="index.html#contact">Contact</a>
+                                <a class="nav-link text-white" href="resume.pdf">Resume</a>
                             </li>
                         </ul>
                     </div>
